1.19	???
	- Add NetSpeedCell example ( Boris Zentner )
1.18	Feb 20th, 2013
	- Add South Sudan ( Boris Zentner )
	- Update FIPS codes ( Boris Zentner )
	- Fix garbage at the end of the database_type string ( Boris Zentner )
1.17	Apr 10th, 2012
	- Update FIPS codes ( Boris Zentner )
1.16	Mar 26th, 2012
	- Update country and FIPS codes ( Boris Zentner )
1.15	Mar 15th, 2012
	- Update FIPS codes ( Boris Zentner )
1.14	Jul 25th, 2011
	- Add new database types for CountryV6, CityV6, ASNumV6 and ASNum ( Boris Zentner )
1.13    Jan 21th, 2011
        - Add ASNum support. ( Boris Zentner )
	- Fix getDate and getType ( Richard Régul )
1.12	Aug 18th, 2009
	- Sync RegionName.cs with more recent FIPS codes ( 20090723 ). ( Boris Zentner )
	- Guard most functions in lookupService by either lock or [MethodImpl(MethodImplOptions.Synchronized)] ( Kfir Harel )
1.11	May 16th, 2009
	- Fix IndexOutOfRangeException error when a lookup end in the last valid
	      netblock using GEOIP_MEMORY_CACHE mode ( Boris Zentner )
	- Fixed spelling of Kazakhstan, was Kazakstan ( Boris Zentner )
	- Sync RegionName.cs with more recent FIPS codes. ( Boris Zentner )
1.10	Oct 23th, 2008
	- Remove record.dma_code -- use record.metro_code instead. ( Boris Zentner )
1.9	Oct 22th, 2008
	- Add new static class RegionName. use RegionName.getRegionName("FR", "02") to get the region name. rec.regionName does work for city records ( Boris Zentner )
1.8	May 6th, 2008
	- remove duplicate getID functions using swapbytes in flavor of bytestoLong (Boris Zentner)

1.7	March 18th, 2008
	- Changed license from GPL to LGPL
	- Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
	- getCountry method works with GeoIP City as well as GeoIP Country (Frank Mather)

1.6	February 20th, 2007
	- Added AX/Aland Islands, GG/Guernsey, IM/Isle of Man, JE/Jersey (ISO-3166-1 changes)
	- Replaced CS/Serbia and Montenegro with RS/Serbia, removed ZR/Zaire, added ME/Montenegro