@@ -1,5 +1,8 @@
 1.19	???
 	- Add NetSpeedCell example ( Boris Zentner )
+	- LookupService throws an exception if the database file is not found. ( Guenter Knauf )
+	- Cleanup the example files ( Guenter Knauf )
+	- Add new example infoExample.cs ( Guenter Knauf )
 1.18	Feb 20th, 2013
 	- Add South Sudan ( Boris Zentner )
 	- Update FIPS codes ( Boris Zentner )
